--- a/practicle-html5/Joe's Coffee Store Website/allcoffees.html
+++ b/practicle-html5/Joe's Coffee Store Website/allcoffees.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <title>All Coffees</title>
+
+        <link href="styles\layout.css" rel="stylesheet" />
+        <script src="scripts/dragAndDrop.js"></script>
     </head>
     <body>
         <header>
@@ -61,11 +64,14 @@
                 </div>
             </article>
         </section>
-
         <div id="shoppingcart">
             <header class="blockheader"><span>Shopping cart</span></header>
             <ul></ul>
         </div>
-        </section>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", addDnDHandlers, false);
+        </script>
+
     </body>
 </html>
