added some google maps & geo_positioning to the site

--- a/practicle-html5/Joe's Coffee Store Website/allcoffees.html
+++ b/practicle-html5/Joe's Coffee Store Website/allcoffees.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>All Coffees</title>
+        <title>All Coffees | Joe's Coffee Store</title>
 
         <link href="styles\layout.css" rel="stylesheet" />
-        <script src="scripts/dragAndDrop.js"></script>
+        <script src="scripts/dragAndDrop.js"></script> <!--bug: firefox developer browser-->
     </head>
     <body>
         <header>
