--- a/practicle-html5/Joe's Coffee Store Website/index.html
+++ b/practicle-html5/Joe's Coffee Store Website/index.html
@@ -48,6 +48,10 @@
             </span>
         </section>
 
+        <template> <!--notice that the contents of the template element are not rendered in the browser-->
+            <p><strong>bubuka Sharif</strong> is my name.</p>
+        </template>
+
         <aside id="events">
             <header>Here's what's happenning!</header>
             <ul>
